2018-03-31 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCopt.c:
	  Consider string literal reuse in dead code elimination, part of RFE #567.

2018-03-31 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* sdas/asxxsrc/asout.c
	* sdas/asxxsrc/sdas.c
	* sdas/asxxsrc/sdas.h: enable sdasstm8 to emit 24-bit relocation data

2018-03-30 Philipp Klaus Krause <pkk AT spth.de>

	* support/valdiag/tests/overflow.c:
	  Disable tests for known bugs #2733, #2734.
	* device/lib/stm8-large/heap.s:
	  Fix heap initialization.

2018-03-30 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* support/regression/collate-results.py: fix bug #2731 and
	  handle malformed "Summary" and "Simulator" stats better

2018-03-29 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/SDCCast.c,
	  src/SDCCutil.c,
	  src/SDCCval.c,
	  src/SDCCval.h:
	  Make optimization of stdlib calls play nice with string reuse.
	* support/util/dbuf.c,
	  support/util/dbuf.h:
	  Improve const-correctness.

2018-03-28 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c,
	  support/regression/tests/bug-2124.c,
	  support/regression/tests/bug-2373.c,
	  support/regression/tests/bug-716242.c,
	  support/regression/tests/bug1908493.c,
	  support/regression/tests/compare.c,
	  support/regression/tests/funptrs.c,
	  support/regression/tests/gcc-torture-execute-930702-1.c,
	  support/regression/tests/gcc-torture-execute-991112-1.c,
	  support/regression/tests/gcc-torture-execute-func-ptr-1.c,
	  support/regression/tests/z88dk.c:
	  Give up on supporting function pointers for stm8 large memory model.
	* device/lib/Makefile.in:
	  Build library for stm8 large memory model by default.

2018-03-28 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  Fix long long return values for large memory model.
	* sim/ucsim/stm8.src/glob.cc:
	  Fix decoding of jpf.
	* device/lib/stm8-large/setjmp.s:
	  Fix longjmp() for large memory model.

2018-03-28 Philipp Klaus Krause <pkk AT spth.de>
