@@ -28,6 +28,7 @@
 
 #include <math.h>
 #include "common.h"
+#include "dbuf_string.h"
 
 /*-----------------------------------------------------------------*/
 /* global variables */
@@ -2468,6 +2469,143 @@ optimize:
 }
 
 /*-----------------------------------------------------------------*/
+/* Go back a chain of assigments / casts to try to find a string   */
+/* literal symbol that op really is.                               */
+/*-----------------------------------------------------------------*/
+static symbol *findStrLitDef (operand *op, iCode **def)
+{
+  for(;;)
+    {
+      if (!IS_ITEMP (op))
+        return (0);
+
+      if (bitVectnBitsOn (OP_DEFS (op)) != 1)
+        return (0);
+
+      iCode *dic = hTabItemWithKey (iCodehTab, bitVectFirstBit (OP_DEFS (op)));
+
+      wassert (dic);
+
+      if (dic->op == ADDRESS_OF)
+        {
+          if (def)
+            *def = dic;
+          symbol *sym = OP_SYMBOL (IC_LEFT (dic));
+          return (sym->isstrlit ? sym : 0);
+        }
+
+      if (dic->op != '=' && dic->op != CAST)
+        return (0);
+
+      op = IC_RIGHT (dic);
+    }
+}
+
+/*-----------------------------------------------------------------*/
+/* optimizeStdLibCall - optimize calls to standard library.        */
+/* for now we just merge adjacent calls to puts()                  */
+/*-----------------------------------------------------------------*/
+static void
+optimizeStdLibCall (eBBlock ** ebbs, int count)
+{
+  iCode *ic, *nic, *ndic;
+  symbol *strsym, *nstrsym, *cstrsym;
+  sym_link *strlink, *nstrlink;
+  size_t replacecost;
+
+  for (int i = 0; i < count; i++)
+    {
+      for (ic = ebbs[i]->sch; ic; ic = ic->next)
+        {
+          // Look for call to puts().
+          if (ic->op != CALL || !ic->prev || ic->prev->op != IPUSH && ic->prev->op != SEND)
+            continue;
+          if (!IS_SYMOP (IC_LEFT (ic)) || !OP_SYMBOL (IC_LEFT (ic))->rname || strcmp (OP_SYMBOL (IC_LEFT (ic))->rname, "_puts"))
+            continue;
+
+          // Look for following call to puts().
+          for (nic = ic->next; nic; nic = nic->next)
+            {
+              if (nic->op == '=' && !POINTER_SET (ic) || nic->op == CAST)
+                {
+                  if (!IS_ITEMP (IC_RESULT (nic)))
+                    break;
+                  if (IS_OP_VOLATILE (IC_RIGHT (nic)))
+                    break;
+                }
+              else if (nic->op == ADDRESS_OF)
+                {
+                  if (!IS_ITEMP (IC_RESULT (nic)))
+                    break;
+                }
+              else if (nic->op == IPUSH || nic->op == SEND)
+                {
+                  if (IS_OP_VOLATILE (IC_LEFT (nic)))
+                    break;
+                }
+              else // Todo: Handle more to make the optimization more general.
+                break;
+            }
+          if (!nic || nic->op != CALL || nic->prev->op != IPUSH && nic->prev->op != SEND)
+            continue;
+          if (!IS_SYMOP (IC_LEFT (nic)) || !OP_SYMBOL (IC_LEFT (nic))->rname || strcmp (OP_SYMBOL (IC_LEFT (nic))->rname, "_puts"))
+            continue;
+
+          // Check that the return values are unused
+          if (IC_RESULT (ic) && (!IS_ITEMP (IC_RESULT (ic)) || bitVectnBitsOn (OP_USES (IC_RESULT (ic)))))
+            continue;
+          if (IC_RESULT (nic) && (!IS_ITEMP (IC_RESULT (nic)) || bitVectnBitsOn (OP_USES (IC_RESULT (nic)))))
+            continue;
+
+          // Chek that their parameters are string literals
+          strsym = findStrLitDef (IC_LEFT (ic->prev), 0);
+          nstrsym = findStrLitDef (IC_LEFT (nic->prev), &ndic);
+          if (!strsym || !nstrsym)
+            continue;
+          strlink = strsym->etype;
+          nstrlink = nstrsym->etype;
+
+          // Calculate the cost of doing the replacement in bytes of string literal
+          replacecost = 1; // For '\n'
+          if (strsym->isstrlit > 1)
+            replacecost += strlen (SPEC_CVAL (strlink).v_char);
+          if (nstrsym->isstrlit > 1)
+            replacecost += strlen (SPEC_CVAL (nstrlink).v_char);
+
+          // Doing the replacement saves at least 6 bytes of call overhead (assuming pointers are 16 bits).
+          if (replacecost > 7 - optimize.codeSize + 4 * optimize.codeSpeed)
+            continue;
+
+          // Combine strings
+          struct dbuf_s dbuf;
+          dbuf_init (&dbuf, 3);
+          dbuf_append_str(&dbuf, SPEC_CVAL (strlink).v_char);
+          dbuf_append_str(&dbuf, "\n");
+          dbuf_append_str(&dbuf, SPEC_CVAL (nstrlink).v_char);
+          cstrsym = stringToSymbol (rawStrVal (dbuf_c_str (&dbuf), dbuf_get_length (&dbuf) + 1))->sym;
+          freeStringSymbol (nstrsym);
+          dbuf_destroy (&dbuf);
+
+          // Make second call print the combined string (which allows further optimization with subsequent calls)
+          IC_LEFT (ndic)->key = cstrsym->key;
+          IC_LEFT (ndic)->svt.symOperand = cstrsym;
+
+          // Change unused call to assignments to self to mark it for dead-code elimination.
+          bitVectSetBit (OP_USES (IC_LEFT (ic->prev)), ic->key);
+          bitVectSetBit (OP_DEFS (IC_LEFT (ic->prev)), ic->prev->key);
+          ic->op = '=';
+          IC_RESULT (ic) = IC_LEFT (ic->prev);
+          IC_RIGHT (ic) = IC_LEFT (ic->prev);
+          IC_LEFT (ic) = 0;
+          ic->prev->op = '=';
+          IC_RESULT (ic->prev) = IC_LEFT (ic->prev);
+          IC_RIGHT (ic->prev) = IC_LEFT (ic->prev);
+          IC_LEFT (ic->prev) = 0;
+        }
+    }
+}
+
+/*-----------------------------------------------------------------*/
 /* optimizeCastCast - remove unneeded intermediate casts.          */
 /* Integer promotion may cast (un)signed char to int and then      */
 /* recast the int to (un)signed long. If the signedness of the     */
@@ -2839,6 +2977,9 @@ eBBlockFromiCode (iCode *ic)
   /* dumpraw if asked for */
   if (options.dump_i_code)
     dumpEbbsToFileExt (DUMP_RAW1, ebbi);
+
+  if (!optimize.noStdLibCall)
+    optimizeStdLibCall (ebbi->bbOrder, ebbi->count);
 
   optimizeCastCast (ebbi->bbOrder, ebbi->count);
   while (optimizeOpWidth (ebbi->bbOrder, ebbi->count))
